--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "nodemon": "^2.0.16",
-    "path": "^0.12.7"
+    "nodemon": "^2.0.16"
   }
 }
